[MD extensions] shortcuts instructions and feedback

This CL provides a line of instructions for creating extensions shortcuts.
It also adds interactive feedback during shortcut entry.

Bug: 769576
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I419cb1f4e3ee63aa47fc56ca784faa5ec9f2fdb6
Reviewed-on: https://chromium-review.googlesource.com/748082
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513256}